<resources>
    <string name="app_name">MovieCatalogue v4</string>

    <!-- MOVIE COMPONENT -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Release Date</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>

    <!-- USER COMPONENT -->
    <string name="name">Patricia Joanne</string>
    <string name="email">trianne24@gmail.com</string>

    <!-- NAV -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">About</string>
    <string name="nav_np">Now Playing</string>
    <string name="nav_up">Upcoming</string>
    <string name="nav_fav">My Favorite</string>
    <string name="nav_db">Database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- SETTINGS -->
    <string name="language">Change Language</string>
    <string name="language_settings">Language Settings</string>
    <string name="reminder_settings">Reminder Settings</string>

    <!-- SEARCH -->
    <string name="type_title">Search movie…</string>
    <string name="search">Search</string>

    <!-- REMINDER -->
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="daily_save_reminder">Saved Daily Reminder</string>
    <string name="daily_cancel_reminder">Cancelled Daily Reminder</string>
    <string name="release_save_reminder">Saved Release Reminder</string>
    <string name="release_cancel_reminder">Cancelled Release Reminder</string>

    <!-- WIDGET -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data">NO DATA</string>

</resources>
