<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />

    <item android:title="@string/nav_db">
        <menu>
            <item
                android:id="@+id/nav_np"
                android:icon="@drawable/ic_local_play_black_24dp"
                android:title="@string/nav_np" />
            <item
                android:id="@+id/nav_up"
                android:icon="@drawable/ic_av_timer_black_24dp"
                android:title="@string/nav_up" />
            <item
                android:id="@+id/nav_fav"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/nav_fav" />
        </menu>
    </item>

</menu>